Fix hang on sql shutdown